# rostron_bringup

./: CMakeLists.txt  package.xml
behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_w_replanning_and_recovery.xml
config/: map.yaml  nav2_params.yaml  navigate_w_replanning_and_recovery.xml  yellow_sim.yaml
launch/: blue_sim.launch.py  navigation.launch.py  rostron_nav.launch.py  rostron_simu_core.launch.py  rviz_launch.py  simu.launch.py  simu_core.launch.py  test.launch.py  yellow_sim.launch.py
maps/: division_b.pgm  division_b.yaml
params/: nav.yaml  rostron_sim.yaml
rviz/: nav2.rviz
