<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rostron_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="contact@etienne-schmitz.com">Etienne Schmitz</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rostron_receiver</exec_depend>
  <exec_depend>rostron_sender</exec_depend>
  <exec_depend>rostron_filters_py</exec_depend>
  <exec_depend>rostron_nav</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
